# process-uncertainty-models

./: .gitignore  README.md  pyproject.toml
configs/: accelerate_config.yaml
rely/entropy_threshold/: calculate.py
rely/evaluate/: deepthink.py  eval_completions.py  maj_eval.py  prm_eval.py  sbs_eval.py
rely/generate/: generate.py
rely/inference/: __init__.py  majority_voting.py
rely/inference/sbs/: clients.py  main.py  servers.py  strategies.py
rely/train/regression_prm/: model.py  run.py  trainer.py
rely/utils/: __init__.py  convert_dataset.py  download_gcloud_file.py  scaling_plot.py  upload_dataset.py
src/entropy_threshold/: stepify_dataset.py
src/evaluate/: __init__.py  goodhart.py  goodhart_cot_analysis.py  snr.py  uts_eval.py
src/generate/: complete.py
src/inference/: bon.py
src/inference/sbs/: search.py  utils.py
src/train/: __init__.py
src/train/classification_pum/: run.py
src/utils/: answers_entropy.py  create_value_dataset.py  dataset_summary.py  load.py  sbs_results_to_cots.py  text_utils.py  uncertainty_correctness.py
